# SyclTestProject

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  cnn.cpp  run.sh
